syntax = "proto3";

option csharp_namespace = "DataBaseService.Protos";

import "Protos/base_types.proto";

service UserWorker{
	rpc RegNewUser(RegUserRequest ) returns (BaseResponse);
	rpc EndReg(EndRegRequest ) returns (BaseResponse);
	rpc GetUserBotsList(GetUserBotsListRequest) returns (GetUserBotsListResponse);
}

message RegUserRequest
{
	int32 bot_id =1;
}

message EndRegRequest{
	int32 user_id = 1;
}

message GetUserBotsListRequest{

}
 message GetUserBotsListResponse{

 }